--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# THE FOUR HORSEMEN
-node_modules
-.node_modules
-.env
-.DS_Store
-
 # Logs
 logs
 *.log
@@ -109,3 +103,5 @@ dist
 # TernJS port file
 .tern-port
 
+# Environmental variables
+.env
