--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/treguv/tech-blog.git"
+    "url": "git+https://github.com/Isaiahw01/TechBlog"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/treguv/tech-blog/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/treguv/tech-blog#readme",
+  "homepage": "https://github.com/Isaiahw01/TechBlog",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
